Snapping no longer works behind faces/objects in wireframe/x-ray mode. #109433

Closed
opened 2023-06-28 06:06:39 +02:00 by Hayden-Price · 2 comments
First-time contributor

System Information
Operating system: Windows 10 v19045.3086
Graphics card: AMD Radeon RX 7900 XTX

Blender Version
Broken: 3.60 LTS.
Worked: 3.50 and earlier.

Snapping through x-ray no longer seems to be working, be it solid mode or wireframe, whether enabling x-ray or not, or the combination of the two.

Exact steps for others to reproduce the error

  • open attached blend.
  • select the smaller plane and go to edit mode.
  • try to snap one of the vertex to one of the corners of the cube behind the bigger plane

Original description:

Snapping options (snap to vertex, snap to edge, etc.) no longer work or act unexpectedly when trying to snap to edges/verticies that are behind other objects in wireframe/x-ray view. While this is expected behaviour in solid/material preview options, snapping operations in wireframe/x-ray has always allowed the user to snap to verticies/edges that are behind other objects or faces.

Add a plane between two objects and try to snap the verticies with the plane inbetween. Tried with both pre-3.6 .blend files and with new ones.

.gifs of two different files

**System Information** Operating system: Windows 10 v19045.3086 Graphics card: AMD Radeon RX 7900 XTX **Blender Version** Broken: 3.60 LTS. Worked: 3.50 and earlier. Snapping through x-ray no longer seems to be working, be it solid mode or wireframe, whether enabling x-ray or not, or the combination of the two. **Exact steps for others to reproduce the error** - open attached blend. - select the smaller plane and go to edit mode. - try to snap one of the vertex to one of the corners of the cube behind the bigger plane ----- Original description: Snapping options (snap to vertex, snap to edge, etc.) no longer work or act unexpectedly when trying to snap to edges/verticies that are behind other objects in wireframe/x-ray view. While this is expected behaviour in solid/material preview options, snapping operations in wireframe/x-ray has always allowed the user to snap to verticies/edges that are behind other objects or faces. Add a plane between two objects and try to snap the verticies with the plane inbetween. Tried with both pre-3.6 .blend files and with new ones. .gifs of two different files
Hayden-Price added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-28 06:06:40 +02:00
Member

Can confirm.

Tagging @mano-wii due to the recent reworks of the snapping feature, who is probably more familiar with what exactly is broken.

Can confirm. Tagging @mano-wii due to the recent reworks of the snapping feature, who is probably more familiar with what exactly is broken.
YimingWu added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-06-28 07:19:18 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-06-28 15:35:22 +02:00

Thanks for the report.
It was fixed in 4.0 (main).
For 3.6 the fix was put on the list To Be Backported.
Blender LTS: Maintenance Task 3.6

Thanks for the report. It was fixed in 4.0 (main). For 3.6 the fix was put on the list To Be Backported. [Blender LTS: Maintenance Task 3.6](https://projects.blender.org/blender/blender/issues/109399)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109433
No description provided.